<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="Mmenu">Projects</string>
    <string name="menu_settings">Settings</string>
    <string name="add">Add New</string>
    <string name="delete">Delete First</string>
    <string name="hello">Hello</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_project">AddProject</string>
    <string name="tvTitle">Add Project...</string>
    <string name="tvName">Project Name:</string>
	<string name="etName">Enter name of new project</string>
	<string name="bRecord">Record</string>
    <string name="bPlayback">Playback</string>
    <string name="tbLoop">Loop</string>
    <string name="tvLoopLabel">Toggle Loop:</string>
    <string name="tvCounterDefault">00:00/00:00</string>
    <string name="bSubmit">Submit</string>
    <string name="bStopRecording">Stop</string>
	
</resources>